objects/Process_Overview_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for the process overview page</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show this entry on the display page</description>
        <inlineHelpText>Show this entry on the display page</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Label_Key__c</fullName>
        <description>Key to lookup the custom label.</description>
        <inlineHelpText>Key to lookup the custom label.</inlineHelpText>
        <label>Custom Label Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Controls the display order on the page, starting at top, vertical position.</description>
        <inlineHelpText>Controls the display order on the page, starting at top, vertical position.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flow_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define if this is a flow setting or a statistics setting</description>
        <inlineHelpText>Define if this is a flow setting or a statistics setting</inlineHelpText>
        <label>Flow Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IconImageName__c</fullName>
        <description>This is the name of the resource image in the icon resource bundle.</description>
        <inlineHelpText>This is the name of the resource image in the icon resource bundle. It should look like
[ResourceName].[IconName] (without the brackets...)</inlineHelpText>
        <label>IconImageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IconStyleClass__c</fullName>
        <description>This holds the style class name for the icon used in the layout page</description>
        <inlineHelpText>This holds the style class name for the icon used in the layout page</inlineHelpText>
        <label>IconStyleClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <description>This holds the configuration URL link. The user will be taken to this end point when the link is clicked</description>
        <inlineHelpText>Enter the fully qualified Link URL in this field.</inlineHelpText>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <description>Stores the API name of a report.</description>
        <inlineHelpText>Input the API name of the report you wish to link to here.</inlineHelpText>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>This is the name of the loan processing stage. It must match exactly the stage name used in the stage picklist on the loan object.</description>
        <inlineHelpText>This is the name of the loan processing stage. It must match exactly the stage name used in the stage picklist on the loan object.</inlineHelpText>
        <label>Stage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StaticResourceName__c</fullName>
        <description>Contains the name of the static resource where the icons are packaged</description>
        <inlineHelpText>Contains the name of the static resource where the icons are packaged</inlineHelpText>
        <label>StaticResourceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Process Overview Configuration</label>
</CustomObject>